--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,4 +1,41 @@
 nav {
-    overflow: hidden;
+    background: white;
+    top:0px;    
+    margin: none;
+    padding: none;
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: none;
+    overflow: hidden;
+    background: white;
+    margin-left: 10%;
+    margin-right: 10%;  
+
+}
+
+.logo {
+    display: block;
+    color: white;
+    background: teal;
+    text-align: center;
+    text-decoration: none;
+    padding: 14px 16px;
+    margin: none;
+    height: 25px;
+}
+
+nav li {
+    float:left;
+    color: black;
+}
+nav li a {
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    padding: 14px 16px;
+    margin: none;
+}
