--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,9 @@
     text-align: left;
     float: left;
     height: 100%;
-    margin: 0px 0px 0px 10%;
+    /* margin: 0px 0px 0px 25%; */
+    margin: auto;
+    
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
@@ -20,7 +22,9 @@
     float: right;
     text-align: center;
     top: 0px;
-    margin: 0 10% 0 0;
+    /* margin: auto 10% 0 0; */
+    margin: auto;
+    width: 50%;
     color: #777777;
 }
 
@@ -74,6 +78,21 @@ h2 {
 
 }
 
+footer {
+    background-color: #666666;
+    color: lightgray;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    position: fixed;
+    bottom: 0px;
+    text-align: center;
+    font-size: 10px;
+    height: 5%;
+    width: 100%;
+    border-top-style: solid;
+    border-top-width: 8px;
+    border-top-color: #4aaaa5;
+}
+
 header {
     overflow: hidden;
     padding:0px;
@@ -86,13 +105,13 @@ header {
 }
 
 content {
-    /* margin: 100%; */
+
     clear: both;
 }
 
 article {
     border: 1px solid dddddd;
-    margin: 3% 0% 0 10%;
+    margin: 1% auto auto auto;
     background: #ffffff;
     border-color: #dddddd;
     border-width: 1px;
