--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 .img-class {
     float: left;
     padding: 0px 2.5%;
-  
+    /* Not sure why, but image keeps showing up rotated, fix it */
+    transform: rotate(270deg);
   } 
 
 .name-logo {
